<resources>
    <string name="app_name">Pokechecklist</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button1">Shinydex</string>
    <string name="button2">My Shinies</string>
    <string name="button3">Progress</string>
    <string name="button4">Random hunt suggestion</string>
    <string name="developer_text">Developed by Zindre</string>
    <string name="title_activity_pokedex">Pokédex</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_shinies">My Shinies</string>
    <string name="title_activity_progress">Progress</string>
    <string name="title_activity_pokemon">Pokemon</string>
    <string name="large_text"/>
    <string name="colored_pokeball_image_path">path</string>
    <string name="grayscale_pokeball_image_path">path</string>
    <string name="pokemon_list_item_image_view_description">gif/image/icon of the pokemon corresponding to list item
    </string>
    <string name="pokemon_list_item_image_button_description">by default it shows a grayscale pokeball and when that
        items pokemon is in the "catch" table it will show a colored pokeball like in the games
    </string>
    <string name="genswitch">
        152
        252
        387
        494
        650
        0
    </string>
    <string name="image_skip_list">
        4-2
        7-2
        10-1
        13-1
        16-1
        19-1
        20-1
        21-1
        26-2
        27-1
        42-1
        43-1
        45-1
        46-1
        65-1
        66-2
        81-1
        85-1
        86-1
        95-1
        98-1
        112-1
        113-1
        116-1
        119-1
        120-1
        124-1
        128-1
        130-1
        131-2
        143-1
        151-2
        155-1
        166-1
        167-1
        179-1
        182-1
        186-1
        187-1
        191-1
        195-1
        196-1
        199-1
        202-27
        203-1
        204-1
        208-1
        209-2
        213-2
        215-2
        216-1
        218-1
        222-1
        225-1
        230-2
        233-1
        249-1
        255-1
        256-1
        257-1
        258-2
        261-1
        268-1
        270-1
        273-1
        275-1
        276-1
        283-1
        303-1
        304-1
        307-1
        308-1
        309-2
        311-1
        316-1
        317-1
        318-1
        320-1
        323-1
        324-2
        333-1
        335-1
        351-1
        352-3
        355-1
        360-1
        363-1
        370-1
        374-1
        377-1
        381-1
        382-1
        383-1
        384-1
        385-1
        397-1
        398-1
        399-1
        400-1
        401-1
        402-1
        403-1
        404-1
        405-1
        406-1
        408-1
        413-2
        414-2
        416-1
        418-1
        419-1
        420-1
        422-1
        423-1
        424-1
        425-1
        429-1
        444-1
        445-1
        446-2
        449-1
        450-1
        451-1
        454-1
        455-1
        457-1
        458-1
        460-1
        461-2
        462-1
        465-1
        466-1
        474-1
        476-1
        480-5
        488-1
        493-1
        522-1
        532-1
        551-1
        556-1
        586-3
        587-3
        593-1
        594-1
        642-1
        643-1
        646-1
        647-2
        648-1
        649-1
        667-19
        669-1
        670-4
        671-5
        672-4
        677-9
        679-1
        682-1
        710-3
        711-3
        717-1
        720-1
        721-1
        0
    </string>
    <string name="db_dialog">Creating and filling in the pokedex database.\n\nThis is a one-time-operation, so please be
        patient this one time!
    </string>
    <string name="numbersign">#</string>
    <string name="registerButton">Register Catch!</string>
    <string name="game">Game:</string>
    <string name="encounters">Encounters:</string>
    <string name="method">Method:</string>
    <string name="shiny_charm">With Shiny Charm?</string>
    <string name="button_5">Hunt</string>
</resources>