<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
>
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbarBackground"
            app:titleTextColor="@color/TitleTextColor"
            android:id="@+id/main_toolbar"
    />


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/menu_top_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundGrey"
            tools:showIn="@layout/activity_main"
            tools:context="com.aarstrand.zindre.pokechecklist.MainActivity"
            android:orientation="vertical"
    >



        <Button
                android:text="@string/button1"
                android:background="@color/buttonColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
                android:layout_marginTop="@dimen/menu_button_top_padding"
                android:id="@+id/button"
        />

        <Button
                android:text="@string/button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:background="@color/buttonColor"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
        />

        <Button
                android:text="@string/button2"
                android:background="@color/buttonColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
                android:layout_marginTop="@dimen/menu_button_top_padding"
                android:id="@+id/button2"
        />

        <Button
                android:text="@string/button3"
                android:background="@color/buttonColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
                android:layout_marginTop="@dimen/menu_button_top_padding"
                android:id="@+id/button3"
        />

        <!--
        <Button
                android:text="@string/button4"
                android:background="@color/buttonColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_bottom_padding"
                android:layout_marginTop="@dimen/menu_button_top_padding"
                android:id="@+id/button4"
        />
        -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
        >

            <TextView
                    android:text="@string/developer_text"
                    android:textColor="@color/braggingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/textView"
            />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

